Make active season labels dynamic
